--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+keepalived (1:1.3.6-1hnakamur1) xenial; urgency=medium
+
+  * Imported Upstream version 1.3.6
+  * Delete unused patches
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Tue, 12 Sep 2017 14:27:06 +0900
+
 keepalived (1:1.3.2-1build1) artful; urgency=medium
 
   * No-change rebuild against libxtables12
