--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+keepalived (1:1.3.7-1hnakamur1) xenial; urgency=medium
+
+  * Imported Upstream version 1.3.7
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Mon, 02 Oct 2017 15:03:42 +0900
+
 keepalived (1:1.3.6-1hnakamur1) xenial; urgency=medium
 
   * Imported Upstream version 1.3.6
