--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+keepalived (1:1.3.9-1hnakamur1) xenial; urgency=medium
+
+  * Imported Upstream version 1.3.9
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Tue, 24 Oct 2017 16:12:56 +0900
+
 keepalived (1:1.3.7-1hnakamur1) xenial; urgency=medium
 
   * Imported Upstream version 1.3.7
