--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+keepalived (1:1.4.3-1ubuntu1ppa1~ubuntu16.04.1) xenial; urgency=medium
+
+  * Imported Upstream version 1.4.3
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Wed, 18 Apr 2018 15:04:26 +0900
+
 keepalived (1:1.3.9-1hnakamur1) xenial; urgency=medium
 
   * Imported Upstream version 1.3.9
