--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+keepalived (1:2.0.0-1ubuntu1ppa1~ubuntu18.04) bionic; urgency=medium
+
+  * New upstream version 2.0.0
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Mon, 04 Jun 2018 16:24:28 +0900
+
 keepalived (1:1.4.4-1ubuntu1ppa1~ubuntu18.04) bionic; urgency=medium
 
   * New upstream version 1.4.4
