--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,62 @@
+2018-06-06 Quentin Armitage <quentin@armitage.org.uk>
+	* keepalived-2.0.2
+	* Only compile code in rttables.c that is needed by the
+	  configuration.
+	* Set default preferences for ip rules if not specified.
+	  Since different vrrp instances can become master in different
+	  orders, if preferences (priorities) are not specified for
+	  ip rules, the order in which they are specified will be
+	  indeterminate. In order to give some consistency, keepalived
+	  will not allocate a default preference to each rule, and will
+	  also warn that this is probably not going to work as intended.
+	  The solution is to specify a preference for each rule.
+	* Require preference if an ip rule specifies goto.
+	  Since preferences are now auto-generated if not specified, a
+	  rule with a goto must now specify a preference.
+	* Add tracking of virtual rules.
+	  If a virtual rule is deleted, the vrrp instance will transition
+	  to backup. When it becomes master again the rule will be re-added.
+	* Fix compilation failure found by Travis-CI.
+	* In configure.ac check if SHA1_Init() needs -fpic.
+	* Fix make rpm when rpmbuild doesn't support --build-in-place.
+	* Update INSTALL file to describe how to build rpm files.
+	* Fix instructions for building rpm packages.
+
+2018-06-04 Quentin Armitage <quentin@armitage.org.uk>
+	* keepalived-2.0.1
+	* Remove '\n' characters from log_message() text.
+	* Allow IPv6 ip rules to be specified using fwmarks.
+	* Fix configure generation of keepalived.spec file.
+	* Stop rebuilding scheduler.o every make.
+	* Remove ' characters from configure args in keepalived -v output.
+	* Remove duplicate reporting of network namespace in config dumps
+	* Add ${_INSTANCE} config parameter.
+	* Remove debugging log message.
+	* Recalculate max_fd used for select if it should reduce.
+	* Add tracking of virtual routes.
+	  If a virtual route is deleted, by default to vrrp instance will
+	  now transition to backup mode, and if it transitions to master
+	  again the route will be re-added. If an interface on which a
+	  route is configured is down, then the instance will go to fault
+	  state, since the route cannot be added.
+	  This commit also adds a no-track option for routes, which means
+	  that deletion of the route will not cause the vrrp instance to
+	  transition to backup.
+	* Handle interface down at startup with tracked route configured on it
+	  If a virtual route which is tracked is configured on an interface that
+	  is down at startup, then the vrrp instance needs to start in fault
+	  state.
+	* Rename netlink_reflect_filter() to netlink_link_filter()
+	  The function only handles RTM_NEWLINK/RTM_DELLINK messages and there
+	  are other functions to handle other message types.
+	* Fix compilation warning.
+	* Make recreating deleted VMACs work.
+	* Fix Travis-CI compilation failure and warning.
+	* Stop duplicate definition and duplicate include in vrrp_iproute.c.
+	* Add new ip rule options for Linux 4.17
+	  FRA_PROTOCOL, FRA_IP_PROTO, FRA_SPORT_RANGE and FRA_DPORT_RANGE have
+	  been added in Linux 4.17.
+
 2018-05-26 Quentin Armitage <quentin@armitage.org.uk>
 	* keepalived-2.0.0
 	* Beta branch merge into master branch ! 2years of dev here !
