--- a/TODO
+++ b/TODO
@@ -3,9 +3,9 @@ Whatever you want !
 The following are still outstanding from the ideas for what was the beta
 development:
 
+	* Only monitor IPv4/6 addresses as needed
 	* Tracking static addresses (See pull request 478)
 	* Routes/rules being removed (static and dynamic)
-	* Route can be removed if i/f goes down
 	* Tracking static rules/routes
 	* For static/dynamic rules/routes/addresses, add a no-track option
 	* Allow specification for interfaces not existing at startup - but report them.
@@ -15,8 +15,7 @@ development:
 	* Add track_if/track_route for static routes
 	* Add option for whether vrrp instance to go down if static/dynamic rule/route/address disappears
 	* Add static addresses and routes on vmacs
-	* Ensure all relevant notifications sent
-	    May want to stop VS down at start for alpha mode RSs (except SNMP)
+	* May want to stop VS down at start for alpha mode RSs (except SNMP)
 	* Rate limit respawning if a child process dies
 	* Have a socket to connect to for receiving notifications. A process
 	    can register for what notifications it wants to receive.
@@ -42,6 +41,11 @@ development:
 	    Add PROCESS_CHECK for checkers
 	    - Find PID and remember it. If PID has gone, try and find new pid
 	    Look at how pidof/killall find processes
+	* Don't add RTNMGRP_IPV4_ADDR/IPV6_ADDR if not monitoring one of those
+	    families
+	* Allow dynamic definitions, e.g. $_VI_NAME
+	    Also $*_INSTANCE net_namspace $_INSTANCE
+	    so $* means only do if $_INSTANCE not blank. */
 
 
 Other issues awaiting resolution:
