--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+keepalived (1:2.0.4-1ubuntu1ppa1~ubuntu18.04.1) bionic; urgency=medium
+
+  * New upstream version 2.0.4
+
+ -- Hiroaki Nakamura <hnakamur@gmail.com>  Tue, 19 Jun 2018 16:32:06 +0900
+
 keepalived (1:2.0.2-1ubuntu1ppa1~ubuntu18.04.1) bionic; urgency=medium
 
   * New upstream version 2.0.2
